# zigsight

./: .gitignore  .pre-commit-config.yaml  404.html  =2.1.0  CHANGELOG.md  CONTRIBUTING.md  FRONTEND_PANEL_IMPLEMENTATION.md  Makefile  README.md  docker-compose.yml  hacs.json  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  search.html  setup.cfg  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yaml  docs-preview.yaml  integration-test.yaml  labeler.yaml  lint.yml  nightly-compatibility.yaml  pr-preview.yaml  pre-commit.yml  release.yaml  release.yml  smoke-test.yaml  stale.yaml  test.yml  validate.yaml  workflow-validation.yaml
DEVELOPER_README/: index.html
analytics/: index.html
automations/: README.md  battery_drain.yaml  index.html  network_health_daily_report.yaml  reconnect_flap.yaml
custom_components/: __init__.py
custom_components/zigsight/: __init__.py  analytics.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  options_flow.py  recommender.py  services.yaml  strings.json  topology.py  wifi_scanner.py  zha_collector.py
custom_components/zigsight/binary_sensor/: __init__.py  binary_sensor.py
custom_components/zigsight/diagnostics/: __init__.py
custom_components/zigsight/sensor/: __init__.py  sensor.py
custom_components/zigsight/www/: README.md  topology-card.js  topology-visualization.js  zigsight-panel.js
docs/: DEVELOPER_README.md  analytics.md  automations.md  faq.md  frontend_panel.md  getting_started.md  index.md  ui.md  wifi_recommendation.md
docs/integrations/: deconz.md  zha.md  zigbee2mqtt.md
examples/: ui-lovelace.yaml
faq/: index.html
getting_started/: index.html
integrations/deconz/: index.html
integrations/zha/: index.html
integrations/zigbee2mqtt/: index.html
scripts/: integration-test.sh
search/: search_index.json
test_config/: .gitignore  README.md  automations.yaml  configuration.yaml  scenes.yaml  scripts.yaml
tests/: __init__.py  bandit.yaml  conftest.py  test_analytics.py  test_api.py  test_blueprints.py  test_coordinator.py  test_manifest.py  test_recommender.py  test_sensor.py  test_topology.py  test_wifi_scanner.py  test_zha_collector.py  test_zha_integration.py
ui/: index.html
wifi_recommendation/: index.html
