[metadata]
name = zigsight
version = 0.1.0
description = Home Assistant diagnostics and optimization toolkit for Zigbee networks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmornati/zigsight
author = Marco Mornati
author_email = marco.mornati@example.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Home Automation

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.11
zip_safe = False
include_package_data = True

[options.packages.find]
where = .
include = custom_components*

[options.package_data]
custom_components.zigsight = *.json,*.yaml,*.yml

[bandit]
exclude_dirs = tests,venv,.venv
skips = B101,B601
